02-rollouts/canary/3-gateway-api/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRole
#metadata:
#  name: httproutes-admin-role
#  namespace: api
#rules:
#- apiGroups:
#  - ""
#  resources:
#  - configmaps
#  verbs:
#  - create
#
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: httproutes-admin-rolebinding
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: httproutes-admin-role
#subjects:
#  - namespace: argo-rollouts
#    kind: ServiceAccount
#    name: argo-rollouts
