02-rollouts/canary/3-gateway-api/api-by-attribute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-ro
  namespace: api
  labels:
    app: api
    name: api-deploy
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po
  strategy:
    canary:
      stableService: api-svc
      canaryService: canary-api-svc
      maxSurge: 25%
      maxUnavailable: 0
      steps:
      - setCanaryScale:
          weight: 25
      - setHeaderRoute:
          name: api-httproute
          match:
          - headerName: X-Version
            headerValue:
              exact: v2
      - pause: {}
      trafficRouting:
        managedRoutes:
        - name: api-httproute
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: api-httproute
            namespace: api
  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
