02-rollouts/canary/3-gateway-api/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api
  labels:
    app: api
    name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
      name: api-po
  template:
    metadata:
      name: api-po
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
  labels:
    app: api
    name: api-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - api-192.168.39.130.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api-svc
      namespace: api
      port: 3000
