02-rollouts/canary/3-gateway-api/httproute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
    name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-10rps
  namespace: api
spec:
  rateLimit:
    average: 10
    period: 1

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
  - api-192.168.39.200.nip.io
  rules:
  - matches:
    - path:
        value: /api/v1
        type: PathPrefix
    backendRefs:
    - name: api-svc
      port: 3000
    - name: canary-api-svc
      port: 3000
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /api
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Access-Control-Allow-Origin
          value: "*"
        remove:
        - X-Powered-By
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ratelimit-10rps
