02-rollouts/canary/3-gateway-api/httproute_gateway_generated.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
spec:
  # Deleted other details
  rules:
  # Original matchers
  - backendRefs:
    - group: ""
      kind: Service
      name: api-svc
      port: 3000
      weight: 99
    - group: ""
      kind: Service
      name: canary-api-svc
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  # New generated matcher
  - backendRefs:
    - group: ""
      kind: Service
      name: canary-api-svc
      port: 3000
      weight: 1
    matches:
    - headers:
      - name: X-Version
        type: Exact
        value: v2
      path:
        type: PathPrefix
        value: /
