02-rollouts/canary/3-gateway-api/whoami.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deploy
  namespace: api
  labels:
    name: whoami-deploy
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
      name: whoami-po
  template:
    metadata:
      name: whoami-po
      labels:
        app: whoami
        name: whoami-po
    spec:
      containers:
      - name: whoami-container
        image: traefik/whoami
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: api
  labels:
    app: whoami
    name: whoami-svc
spec:
  type: ClusterIP
  selector:
    app: whoami
    name: whoami-po
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ing
  namespace: api
  labels:
    name: whoami-ing
    app: whoami
spec:
  ingressClassName: traefik 
  rules:
  - host: whoami-192.168.39.130.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
